# MediaVault

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  TODO.md  alembic.ini  main.py  mediavault.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-macos.yml  ci.yml
app/: i18n.py
app/dialogs/: backups_dialog.py  entry_dialog.py  participants_dialog.py  settings_dialog.py
app/theme/: manager.py
app/windows/: main_window.py
app/workers/: sync_worker.py
config/: settings.default.json  settings.py
core/: enums.py  schemas.py
core/models/: base.py  entry.py
core/repositories/: entry_repository.py
core/services/: backup_service.py  entry_service.py  sync_service.py
core/utils/: files.py  logging_setup.py  (+1 more)
database/: __init__.py  engine.py  init.py
docs/: ARCHITECTURE.md  MULTIPLATFORM.md  SYNC_WARNING.md
migrations/: env.py
mobile/: .gitignore  README.md  pubspec.yaml
providers/: base.py  opengraph.py  registry.py
sync-server/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
sync-server/sync_server/: __init__.py  config.py  database.py  main.py  models.py  repository.py  schemas.py  service.py
sync-server/tests/: conftest.py  test_sync.py
tests/: conftest.py  test_backup_service.py  test_backups_dialog.py  test_entry_dialog.py  test_entry_service.py  test_files.py  test_i18n.py  test_main_window.py  test_opengraph_provider.py  test_participants_dialog.py  test_settings_dialog.py  test_sync_service.py  test_sync_worker.py  test_url_validator.py
themes/: light.qss  neon_dark.qss
(+13 files in other folders)
